[package]
name = "tonesDSP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]
name = "tonesDSP"

[dependencies]
uniffi = "0.27"


[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }

# cd /Users/mat/TECH41/gitroot/tones-dsp
# cargo swift package
